Add initial sdk code and settings code.

--- a/oracle.html
+++ b/oracle.html
@@ -2,7 +2,8 @@
 
 <html>
 <head>
-  <script src="web-sdk.js"></script>
+  <script src="settings.js"></script>
+  <script src="web-sdk.js" onload="initSDK('<WebSDK namespace>')"></script>
 </head>
 <body>
 
