Set SDK Namespace

--- a/oracle.html
+++ b/oracle.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <script src="settings.js"></script>
-  <script src="web-sdk.js" onload="initSDK('<WebSDK namespace>')"></script>
+  <script src="web-sdk.js" onload="initSDK('Bots')"></script>
 </head>
 <body>
 
