Onload is not needed.

--- a/oracle.html
+++ b/oracle.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <script src="settings.js"></script>
-  <script src="web-sdk.js" onload="initSDK('Bots')"></script>
+  <script src="web-sdk.js"></script>
 </head>
 <body>
 
