--- a/stanford.html
+++ b/stanford.html
@@ -25,15 +25,15 @@
     <meta name="msapplication-square310x310logo" content="https://www-media.stanford.edu/assets/favicon/mstile-310x310.png" />
 
     <title>Service Catalog | Research Hub</title>
-    <link rel="stylesheet" media="all" href="/sites/g/files/sbiybj20956/files/css/css_WiPHNZuT4ospqxaIoytY6AfkGdIcYlxFaNRQ7jl03Xw.css" />
+    <link rel="stylesheet" media="all" href="/stanford/css/css_WiPHNZuT4ospqxaIoytY6AfkGdIcYlxFaNRQ7jl03Xw.css" />
 <link rel="stylesheet" media="all" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" />
 <link rel="stylesheet" media="all" href="https://use.fontawesome.com/releases/v5.13.1/css/v4-shims.css" />
-<link rel="stylesheet" media="all" href="/sites/g/files/sbiybj20956/files/css/css_9wOX12S95A1izX_yCdm2mFf8gPjjrTOhLpQP4P9hRO0.css" />
-<link rel="stylesheet" media="all" href="/sites/g/files/sbiybj20956/files/css/css_-h2u2Fku8V42ARsOPUoznUK8il4hQcG93tbVQ1I3cgA.css" />
-<link rel="stylesheet" media="print" href="/sites/g/files/sbiybj20956/files/css/css_4LEccaIoDbrClNkuuLS_qpuAYpAi6PVDTEkWmc-J0-E.css" />
+<link rel="stylesheet" media="all" href="/stanford/css/css_9wOX12S95A1izX_yCdm2mFf8gPjjrTOhLpQP4P9hRO0.css" />
+<link rel="stylesheet" media="all" href="/stanford/css/css_-h2u2Fku8V42ARsOPUoznUK8il4hQcG93tbVQ1I3cgA.css" />
+<link rel="stylesheet" media="print" href="/stanford/css_4LEccaIoDbrClNkuuLS_qpuAYpAi6PVDTEkWmc-J0-E.css" />
 
-    <script src="/core/assets/vendor/modernizr/modernizr.min.js?v=3.11.7"></script>
-<script src="/core/misc/modernizr-additional-tests.js?v=3.11.7"></script>
+    <script src="/stanford/js/modernizr.min.js?v=3.11.7"></script>
+<script src="/stanford/js/modernizr-additional-tests.js?v=3.11.7"></script>
                 </head>
             <body class="page-services-service-catalog section-services not-front role--anonymous">
           <a href="#main-content" class="visually-hidden focusable su-skipnav su-skipnav--content">
@@ -55,7 +55,7 @@
     <a href="https://gsbresearchhub.stanford.edu/" >
   <div class="su-lockup__cell1">
           <div class="su-lockup__logo-wrapper">
-      <img src="/sites/g/files/sbiybj20956/files/2022-06/gsb_h_2c_rhweb1_0.png" alt="Research Hub" class="su-lockup__custom-logo" />
+      <img src="/stanford/images/gsb_h_2c_rhweb1_0.png" alt="Research Hub" class="su-lockup__custom-logo" />
           </div>
     </div>          <div class="su-lockup__cell2">
             <span class="su-lockup__line1" >Research Hub</span>
@@ -216,7 +216,7 @@
     <a href="https://gsbresearchhub.sites.stanford.edu" >
   <div class="su-lockup__cell1">
             <div class="su-lockup__logo-wrapper">
-          <img src="https://gsbresearchhub.stanford.edu/sites/g/files/sbiybj20956/files/2022-06/gsb_h_2c_rhweb1_1.png" alt="  Research Hub" class="su-lockup__custom-logo" />
+          <img src="/stanford/images/gsb_h_2c_rhweb1_1.png" alt="  Research Hub" class="su-lockup__custom-logo" />
                   </div>
         </div>    <div class="su-lockup__cell2">
         <span class="su-lockup__line1" >  Research Hub</span>
@@ -337,6 +337,6 @@
 
     
     <script type="application/json" data-drupal-selector="drupal-settings-json">{"path":{"baseUrl":"\/","scriptPath":null,"pathPrefix":"","currentPath":"node\/156","currentPathIsAdmin":false,"isFront":false,"currentLanguage":"en"},"pluralDelimiter":"\u0003","suppressDeprecationErrors":true,"data":{"extlink":{"extTarget":false,"extTargetNoOverride":false,"extNofollow":false,"extNoreferrer":false,"extFollowNoOverride":false,"extClass":"su-link su-link--external","extLabel":" (link is external)","extImgClass":false,"extSubdomains":false,"extExclude":"","extInclude":"","extCssExclude":".localist-widget, #lclst_widget_footer","extCssExplicit":"#page-content, .su-local-footer","extAlert":false,"extAlertText":"This link will take you to an external web site. We are not responsible for their content.","mailtoClass":"mailto","mailtoLabel":" (link sends email)","extUseFontAwesome":false,"extIconPlacement":"append","extFaLinkClasses":"fa fa-external-link","extFaMailtoClasses":"fa fa-envelope-o","whitelistedDomains":[]}},"stanford_basic":{"nav_dropdown_enabled":true},"user":{"uid":0,"permissionsHash":"29170ba1804e3d36537dc6cc44517eded4384f8cd9e81c4887a7207060d71dfd"}}</script>
-<script src="/sites/g/files/sbiybj20956/files/js/js_-yFcgqDGoHDT4ZNFuaBVIbhcCaoDacg7satzh8nyXVQ.js"></script>
+<script src="/stanford/js/js_-yFcgqDGoHDT4ZNFuaBVIbhcCaoDacg7satzh8nyXVQ.js"></script>
 
 </html>
