--- a/stanford.html
+++ b/stanford.html
@@ -180,7 +180,11 @@
   
   <div class="media embeddable field-media-embeddable-code string-long label-visually-hidden">
     <div class="visually-hidden">Embed Code</div>
-              <div><div class="embeddable-content"><iframe class="airtable-embed" src="https://airtable.com/embed/shrNvlFwrbMO0cIdL?backgroundColor=grayLight&amp;viewControls=on" frameborder="0" width="100%" height="850"></iframe></div></div>
+              <div><div class="embeddable-content">
+		      <iframe id="softr-4e496d0d-f8a1-4e49-b852-5b868125d0c6-list2" src="https://aracely747.softr.app/embed/pages/4e496d0d-f8a1-4e49-b852-5b868125d0c6/blocks/list2" width="100%" height="1000" scrolling="no" frameborder="0" style="border:none;"></iframe>
+		      <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.2.11/iframeResizer.min.js"></script>
+		      <script> iFrameResize({ checkOrigin: false, log: true }, '#softr-4e496d0d-f8a1-4e49-b852-5b868125d0c6-list2');</script>
+		      </div></div>
           </div>
 
 </div>
