--- a/stanford.html
+++ b/stanford.html
@@ -382,36 +382,36 @@
           <nav aria-label="global footer menu">
             <ul class="su-global-footer__menu su-global-footer__menu--global">
               <li>
-                <a href="https://www.stanford.edu">Stanford Home<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://www.stanford.edu">Stanford Home</a>
               </li>
               <li>
-                <a href="https://visit.stanford.edu/plan/">Maps &amp; Directions<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://visit.stanford.edu/plan/">Maps &amp; Directions</a>
               </li>
               <li>
-                <a href="https://www.stanford.edu/search/">Search Stanford<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://www.stanford.edu/search/">Search Stanford</a>
               </li>
               <li>
-                <a href="https://emergency.stanford.edu">Emergency Info<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://emergency.stanford.edu">Emergency Info</a>
               </li>
             </ul>
             <ul class="su-global-footer__menu su-global-footer__menu--policy">
               <li>
-                <a href="https://www.stanford.edu/site/terms/" title="Terms of use for sites">Terms of Use<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://www.stanford.edu/site/terms/" title="Terms of use for sites">Terms of Use</a>
               </li>
               <li>
-                <a href="https://www.stanford.edu/site/privacy/" title="Privacy and cookie policy">Privacy<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://www.stanford.edu/site/privacy/" title="Privacy and cookie policy">Privacy</a>
               </li>
               <li>
-                <a href="https://uit.stanford.edu/security/copyright-infringement" title="Report alleged copyright infringement">Copyright<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://uit.stanford.edu/security/copyright-infringement" title="Report alleged copyright infringement">Copyright</a>
               </li>
               <li>
-                <a href="https://adminguide.stanford.edu/chapter-1/subchapter-5/policy-1-5-4" title="Ownership and use of Stanford trademarks and images">Trademarks<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://adminguide.stanford.edu/chapter-1/subchapter-5/policy-1-5-4" title="Ownership and use of Stanford trademarks and images">Trademarks</a>
               </li>
               <li>
-                <a href="https://bulletin.stanford.edu/pages/c7vDgeOuJIfpZe8GKmW3/"title="Non-discrimination policy">Non-Discrimination<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://bulletin.stanford.edu/pages/c7vDgeOuJIfpZe8GKmW3/"title="Non-discrimination policy">Non-Discrimination</a>
               </li>
               <li>
-                <a href="https://www.stanford.edu/site/accessibility" title="Report web accessibility issues">Accessibility<span class="su-global-footer__link-a11y">(link is external)</span></a>
+                <a href="https://www.stanford.edu/site/accessibility" title="Report web accessibility issues">Accessibility</a>
               </li>
             </ul>
           </nav>
