--- a/stanford.html
+++ b/stanford.html
@@ -376,42 +376,42 @@
     <div class="su-global-footer ">
       <div class="su-global-footer__container" title="Common Stanford resources">
         <div class="su-global-footer__brand">
-          <a  class="su-logo " href="https://www.stanford.edu">Stanford<br>University</a>
+          <a  class="su-logo " href="/">Stanford<br>University</a>
         </div>
         <div class="su-global-footer__content">
           <nav aria-label="global footer menu">
             <ul class="su-global-footer__menu su-global-footer__menu--global">
               <li>
-                <a href="https://www.stanford.edu">Stanford Home</a>
+                <a href="/">Stanford Home</a>
               </li>
               <li>
-                <a href="https://visit.stanford.edu/plan/">Maps &amp; Directions</a>
+                <a href="/">Maps &amp; Directions</a>
               </li>
               <li>
-                <a href="https://www.stanford.edu/search/">Search Stanford</a>
+                <a href="/">Search Stanford</a>
               </li>
               <li>
-                <a href="https://emergency.stanford.edu">Emergency Info</a>
+                <a href="/">Emergency Info</a>
               </li>
             </ul>
             <ul class="su-global-footer__menu su-global-footer__menu--policy">
               <li>
-                <a href="https://www.stanford.edu/site/terms/" title="Terms of use for sites">Terms of Use</a>
+                <a href="/" title="Terms of use for sites">Terms of Use</a>
               </li>
               <li>
-                <a href="https://www.stanford.edu/site/privacy/" title="Privacy and cookie policy">Privacy</a>
+                <a href="/" title="Privacy and cookie policy">Privacy</a>
               </li>
               <li>
-                <a href="https://uit.stanford.edu/security/copyright-infringement" title="Report alleged copyright infringement">Copyright</a>
+                <a href="/" title="Report alleged copyright infringement">Copyright</a>
               </li>
               <li>
-                <a href="https://adminguide.stanford.edu/chapter-1/subchapter-5/policy-1-5-4" title="Ownership and use of Stanford trademarks and images">Trademarks</a>
+                <a href="/" title="Ownership and use of Stanford trademarks and images">Trademarks</a>
               </li>
               <li>
-                <a href="https://bulletin.stanford.edu/pages/c7vDgeOuJIfpZe8GKmW3/"title="Non-discrimination policy">Non-Discrimination</a>
+                <a href="/"title="Non-discrimination policy">Non-Discrimination</a>
               </li>
               <li>
-                <a href="https://www.stanford.edu/site/accessibility" title="Report web accessibility issues">Accessibility</a>
+                <a href="/" title="Report web accessibility issues">Accessibility</a>
               </li>
             </ul>
           </nav>
